# move-fast-and-breakbeats

./: README.md  debug.scd  demo.scd  gamelan.scd  grain.scd  jamelan.orca  jamelan.scd  loadKit.scd  orca-20S07-857016.orca  orca-20S08-904764.orca  orca-20S11-885711.orca  server-setup.scd  test.scd
crescent/: crescent.orca  crescent.scd
cvis/: CMakeLists.txt  Makefile  run.sh
cvis/lib/glad/include/glad/: glad.h
cvis/lib/glad/src/: glad.c
cvis/media/nwwia/: Audio.Macro0.tsv  Audio.Modulation.tsv  Audio.Volume.tsv  Midi0.Macro0.tsv  Midi0.Macro1.tsv  Midi0.Macro2.tsv  Midi0.Macro3.tsv  Midi0.Macro4.tsv  Midi0.Macro5.tsv  Midi0.Macro6.tsv  Midi0.Volume.tsv  Midi1.Macro0.tsv  Midi1.Macro2.tsv  Midi1.Macro4.tsv  Midi1.Volume.tsv  Midi2.Volume.tsv  expandautomation.js  nwwia.xml  parsexml.sh  tsvconvert.js
cvis/src/: analyze.cpp  analyze.h  bloom.h  buffer.h  constants.h  decoding.cpp  decoding.h  encoding.cpp  encoding.h  framebuffer.h  glcontext.cpp  glcontext.h  main.cpp  shader.h  util.cpp  util.h  vis.cpp  vis.h
cvis/src/codec/: decoding.cpp  decoding.h
cvis/src/gl/: framebuffer.h  shader.h  window.h  wrappers.h
cvis/src/postprocessing/: bloom.h  film.h  tiltshift.h
cvis/src/scenes/: endframe.cpp  endframe.h  nwwia.cpp  nwwia.h  tetrik.cpp  tetrik.h
cvis/src/shaders/: axisShader.geom  axisShader.glsl  axisShader.vert  bloomBlurShader.frag  bloomBlurShader.glsl  bloomCompositeShader.frag  bloomCompositeShader.glsl  bloomLuminosityHighPassShader.frag  bloomLuminosityHighPassShader.glsl  copyShader.frag  copyShader.glsl  filmShader.frag  filmShader.glsl  gridShader.frag  gridShader.glsl  gridShader.vert  lineShader.frag  lineShader.geom  lineShader.glsl  lineShader.vert  tiltShiftShader.frag  tiltShiftShader.glsl  uv2d.vert
cvis/src/tetrik/: tetrik.cpp  tetrik.h
extensions/classes/: extensions.sc
jamelan/: jamelan.orca  jamelan.scd
jamelan/modules/: drum1.orca  drum2.orca  saw.orca  sintri.orca  sqr.orca  tuning.orca
synthdefs/: audioIn.scd  defs.scd  generators.scd  granulator.scd  jamelan.orca  sample.scd  vst.scd
vis/: .gitignore  package.json
vis/foo/: VerticalTiltShiftShader.js  collect.js  hilbert.js  index.html  index.js
vis/public/: ChromaticAberrationShader.js  FilmPass.js  ParticleShader.js  analyzer.js  index.html  index.js  midi.js  tarball.js  util.js  vis.js
vis/public/midi/: MidiState.js  webmidi.js
vis/public/shaders/: FilmPass.js  FilmShader.js  RgbGlitchShader.js  RippleShader.js  ScanlineGlitchShader.js  VerticalTiltShiftShader.js
vis/public/vis/: Vis.js  VisNwwia.js  VisSummit.js
